[project]
name = "FW-GUI"
version = "2.2.4"
description = "Basic Flask app to present web forms and process posts from them.  Generates VyOS firewall CLI configuration commands to create the corresponding firewall filters, chains and rules."
authors = [{ name = "Isaac Behrens", email = "isaac@behrenshome.com" }]
maintainers = [{ name = "Isaac Behrens", email = "isaac@behrenshome.com" }]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "boto3",
    "certifi>=2026.1.4",
    "cryptography>=46.0.7",
    "flask>=3.1.3",
    "flask_bcrypt",
    "flask_login",
    "flask_sqlalchemy",
    "Jinja2",
    "logging>=0.4.9.6",
    "napalm == 5.1.0",
    "napalm-vyos",
    "packaging",
    "paramiko",
    "Pygments>=2.20.0",
    "pymongo>=4.16.0",
    "python-dotenv",
    "requests>=2.33.0",
    "setuptools<82",
    "urllib3>=2.6.3",
    "uuid>=1.30",
    "waitress",
    "werkzeug>=3.1.6",
]

[project.optional-dependencies]
test = [
    "black >= 26.3.1",
    "mongomock",
    "pytest",
]

[project.urls]
Homepage = "https://fw-gui.com"
Repository = "https://github.com/ibehren1/fw-gui.git"
Issues = "https://github.com/ibehren1/fw-gui/issues"
Docker = "https://hub.docker.com/r/ibehren1/fw-gui"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
# tests = ["B201", "B301"]
# skips = ["B101", "B601"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v -ra -q"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning:napalm",
    "ignore::DeprecationWarning:telnetlib",
]
